--- a/css/styles.css
+++ b/css/styles.css
@@ -38,14 +38,26 @@ body {
         width: 2%;
         position: absolute;
         right: 1%;
-        top: 5%;
+        top: 2%;
 }
 
+.menu {
+        position: fixed;
+        top: 2%;
+        left: 2%;
+        font-size: 120%;
+        color: #eee;
+	z-index: 1;
+}
+
+.menu:hover {
+	box-shadow: 0 0  1px #eee;
+}
 
 .nav-menu {
         width: 14%;
         left: 1%;
-        top: 3%;
+        top: 7%;
         position: fixed;
         font-size: 100%;
 	z-index: 1;
@@ -144,7 +156,7 @@ body {
   position: absolute;
   padding-bottom: 70px;
   margin-left: 30%;
-  margin-top: 2%;
+  margin-top: 4%;
  
 }
 
@@ -160,6 +172,56 @@ body {
 
 .wp-link:hover {
   background-color: #ccc;
+}
+
+
+.post {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  width: 50%;
+  color: #82a4a4;
+  padding: 0 0 5% 0%;
+ 
+}
+
+.post h3 {
+	color: #12dc00;
+}
+
+.post-link  {
+  color: #12dc00;
+}
+
+.post-link:hover {
+	font-size: 110%;
+}
+
+.bcontainer {
+  position: absolute;
+  top: 40%;
+  left: 20%;
+  width: 55%;
+  padding: 0 0 5% 0%;
+  
+  
+}
+
+
+.bcontainer table {
+        border: 1px solid;
+        width: 100%;
+        border-collapse: collapse;
+	color: #82a4a4;
+	font-size: 110%;
+	word-break: break-all
+}
+
+.bcontainer th, td {
+	width: 20%;
+	padding: 1%;
+	border: 1px solid;
+  
 }
 
 .login-box {
@@ -213,6 +275,12 @@ body {
         font-weight: 1000;
 }
 
+.container {
+	
+	position: absolute;
+	padding: 0 0 5% 0%;
+
+}
 
 
 
@@ -220,7 +288,7 @@ body {
         text-align: left;
         margin-left: 23%;
         margin-top: 6%;
-        font-size: 150%;
+        font-size: 120%;
         color:#12dc00;
 }
 
@@ -238,7 +306,7 @@ body {
         margin-right: 33%;
         margin-left: 25%;
         font-size: 120%;
-        color: #637373;
+        color: #82a4a4;
         text-decoration: underline;
 }
 
@@ -277,7 +345,7 @@ body {
         position: fixed;
         bottom: 8%;
         right: 8%;
-        font-size: 70%;
+        font-size: 55%;
         background-color:  #141837;
         background: linear-gradient(180deg, #141837 14%, #119bb6 100%); 
         color: #eee;
@@ -306,31 +374,6 @@ body {
 }
 
 
-.four0four {
-        color: #72f472;
-        margin: 18% 28%;
-        font-size: 430%;
-
-}
-
-
-table, td {
-        padding: 15px;
-        border: 1px solid;
-}
-
-table {
-  width: 73%;
-  border-collapse: collapse;
-}
-
-td {
-        width: 60%;
-
-
-}
-
-
 
 
 
@@ -340,7 +383,8 @@ td {
 @media (max-width: 768px) { 
 	
 body {
-	background-color: #823331;
+	background-color:  #232323;
+	background: linear-gradient(90deg, #1b1e1f 21%, #3a5c6c 84%);
 }
 
 
@@ -358,7 +402,7 @@ body {
 	position: absolute;
         text-align: center;
         color: #12dc00;
-        top: 37%;
+        top: 47%;
         left: -25%;
 	margin-top: 5%;
         text-align: center;
@@ -382,6 +426,19 @@ body {
         position: absolute;
         right: 2%;
         top: 3%;
+}
+
+.menu {
+        position: fixed;
+        top: 2%;
+        left: 2%;
+        font-size: 120%;
+        color: #eee;
+	z-index: 1;
+}
+
+.menu:hover {
+	box-shadow: 0 0  1px #eee;
 }
 
 
@@ -491,7 +548,7 @@ body {
   position: absolute;
   padding-bottom: 70px;
   margin-left: 20%;
-  top: 48%;
+  top: 60%;
   font-size: 100%;
  
 }
@@ -509,6 +566,59 @@ body {
 .wp-link:hover {
   background-color: #ccc;
 }
+
+
+.post {
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  width: 65%;
+  color: #82a4a4;
+  padding: 0 0 5% 0%;
+ 
+}
+
+.post h3 {
+	color: #12dc00;
+}
+
+.post-link  {
+  color: #12dc00;
+}
+
+.post-link:hover {
+	font-size: 110%;
+}
+
+
+.bcontainer {
+  position: absolute;
+  top: 55%;
+  left: 15%;
+  width: 70%;
+  padding: 0 0 5% 0%;
+  
+  
+}
+
+
+.bcontainer table {
+        border: 1px solid;
+        width: 100%;
+        border-collapse: collapse;
+	color: #82a4a4;
+	font-size: 90%;
+	word-break: break-all
+}
+
+.bcontainer th, td {
+	width: 20%;
+	padding: 2%;
+	border: 1px solid;
+  
+}
+
+
 
 .login-box {
         margin-right: 35%;
@@ -565,7 +675,8 @@ body {
 .container {
 	
 	position: absolute;
-	top: 45%;
+	top: 55%;
+	padding: 0 0 5% 0%;
 
 }
 
@@ -592,7 +703,7 @@ body {
         margin-right: 33%;
         margin-left: 15%;
         font-size: 90%;
-        color: #637373;
+        color: #82a4a4;
         text-decoration: underline;
 }
 
@@ -663,31 +774,6 @@ body {
 }
 
 
-.four0four {
-        color: #72f472;
-        margin: 18% 28%;
-        font-size: 430%;
-
-}
-
-
-table, td {
-        padding: 15px;
-        border: 1px solid;
-}
-
-table {
-  width: 73%;
-  border-collapse: collapse;
-}
-
-td {
-        width: 60%;
-
-
-}
-
-
 
 
 
@@ -698,7 +784,8 @@ td {
 @media (max-width: 576px) { 
 	
 body {
-	background-color: #bdacac;
+	background-color:  #232323;
+	background: linear-gradient(90deg, #1b1e1f 21%, #3a5c6c 84%);
 }
 
 
@@ -716,7 +803,7 @@ body {
 	position: absolute;
         text-align: center;
         color: #12dc00;
-        top: 37%;
+        top: 43%;
         left: -25%;
 	margin-top: 4%;
         text-align: center;
@@ -742,11 +829,23 @@ body {
         top: 3%;
 }
 
+.menu {
+        position: fixed;
+        top: 2%;
+        left: 2%;
+        font-size: 120%;
+        color: #eee;
+	z-index: 1;
+}
+
+.menu:hover {
+	box-shadow: 0 0  1px #eee;
+}
 
 .nav-menu {
         width: 26%;
         left: 3%;
-        top: 8%;
+        top: 6%;
         position: fixed;
         font-size: 90%;
 	z-index: 1;
@@ -788,7 +887,7 @@ body {
         width: 10%;
         border: 5px #2e2e2e;
         border-radius: 20px;
-        font-size: 80%;
+        font-size: 70%;
         font-weight: 700;
         background-color: #868683;
         background-position: 13px 13px; 
@@ -848,7 +947,7 @@ body {
   position: absolute;
   padding-bottom: 70px;
   margin-left: 20%;
-  top: 48%;
+  top: 50%;
   font-size: 100%;
  
 }
@@ -866,6 +965,59 @@ body {
 .wp-link:hover {
   background-color: #ccc;
 }
+
+
+.post {
+  position: absolute;
+  top: 45%;
+  left: 15%;
+  width: 65%;
+  color: #82a4a4;
+  padding: 0 0 5% 0%;
+ 
+}
+
+.post h3 {
+	color: #12dc00;
+}
+
+.post-link  {
+  color: #12dc00;
+}
+
+.post-link:hover {
+	font-size: 110%;
+}
+
+
+.bcontainer {
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  width: 70%;
+  padding: 0 0 5% 0%;
+  
+  
+}
+
+
+.bcontainer table {
+        border: 1px solid;
+        width: 100%;
+        border-collapse: collapse;
+	color: #82a4a4;
+	font-size: 90%;
+	word-break: break-all
+}
+
+.bcontainer th, td {
+	width: 20%;
+	padding: 2%;
+	border: 1px solid;
+  
+}
+
+
 
 .login-box {
         margin-right: 35%;
@@ -921,7 +1073,8 @@ body {
 .container {
 	
 	position: absolute;
-	top: 45%;
+	top: 55%;
+	padding: 0 0 5% 0%;
 
 }
 
@@ -948,7 +1101,7 @@ body {
         margin-right: 33%;
         margin-left: 15%;
         font-size: 90%;
-        color: #637373;
+        color: #82a4a4;
         text-decoration: underline;
 }
 
@@ -989,7 +1142,7 @@ body {
         position: fixed;
         bottom: 25%;
         right: 5%;
-        font-size: 70%;
+        font-size: 90%;
         background-color:  #141837;
         background: linear-gradient(180deg, #141837 14%, #119bb6 100%); 
         color: #eee;
@@ -1016,32 +1169,6 @@ body {
         color: #12dc00;
         font-weight: 900;
 }
-
-
-.four0four {
-        color: #72f472;
-        margin: 18% 28%;
-        font-size: 430%;
-
-}
-
-
-table, td {
-        padding: 15px;
-        border: 1px solid;
-}
-
-table {
-  width: 73%;
-  border-collapse: collapse;
-}
-
-td {
-        width: 60%;
-
-
-}
-
 
 
 
