--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,12 @@ body {
         width: 30%;
         margin-bottom: 1%;
         height: 20%;
-        font-size: 110%;
+        font-size: 100%;
 }
 
+.eblob {
+	display: none;
+}
 
 .htb-badge {
         width: 18%;
@@ -225,12 +228,12 @@ body {
 }
 
 .login-box {
-        margin-right: 35%;
-        margin-left: 35%;
-        margin-top: 7%;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 900;
+	position: absolute;
+	top: 45%;
+	width: 25%;
+	left: 37%;
+	text-align: center;
+	font-size: 100%;
 
 }
 
@@ -245,35 +248,28 @@ body {
 }
 
 
-.login-input {
+.login-box input {
+	position: relative;
         text-align: center;
         outline: none;
         border: none;
         border-bottom: 2px solid #12dc00;
-        width: 80%;
-        height: 10%;
-        margin-top: 55px;
-        font-size: 120%;
-        font-weight:bold;
+	width: 90%;
+	height: 5vh;
+        margin-top: 15%;
+        font-size: 100%;
+        color: #82a4a4;
         background-color: #232323;
         background: linear-gradient(90deg, #27373e 46%, #324b57 68%);
 }
 
-.login-input:hover{
+.login-box input:focus {
         border: 2px solid #12dc00;
-        border-radius: 20px 10px;
+        border-radius: 5px;
         color: #00d4ff;
 }
 
 
-
-
-.login-text {
-        text-align: center;
-        color: #132a2f;
-        font-size: 80%;
-        font-weight: 1000;
-}
 
 .container {
 	
@@ -307,11 +303,62 @@ body {
         margin-left: 25%;
         font-size: 120%;
         color: #82a4a4;
-        text-decoration: underline;
+        text-decoration: none;
+}
+
+
+.sec-text a:link {
+	color: #12dc0080;
+}
+  
+.sec-text a:visited {
+	color: #12dc0080;
 }
 
 .sec-hr{
         width: 60%;
+}
+
+.hljs {
+        background-color: transparent;
+}
+
+.code-wrapper {
+        position: relative;
+        border-radius: 5px;
+        background-color: #1d2c4a91;
+        width: 54%;
+        height: 12vh;
+        margin-top: 6%;
+        margin-left: 24%;
+        margin-bottom: 5%;
+        overflow: auto;
+}
+
+
+.code {
+        position: absolute;
+        top: 1%;
+}
+.cp-btn {
+        position: absolute;
+        border-radius: 5px;
+        border: none;
+        background-color: #315cb091;
+        top: 8%;
+        right: 4%;
+        padding: 7px;
+        color: #eee;
+        opacity: 0;
+}
+
+.cp-btn:hover {
+        background-color: #062d7b91;
+        border: 1px #eee;
+}
+
+.code-wrapper:hover .cp-btn {
+        opacity: 1;
 }
 
 
@@ -621,12 +668,12 @@ body {
 
 
 .login-box {
-        margin-right: 35%;
-        margin-left: 35%;
-        margin-top: 7%;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 900;
+	position: absolute;
+	top: 65%;
+	width: 35%;
+	left: 30%;
+	text-align: center;
+	font-size: 100%;
 
 }
 
@@ -641,35 +688,27 @@ body {
 }
 
 
-.login-input {
+.login-box input {
+	position: relative;
         text-align: center;
         outline: none;
         border: none;
         border-bottom: 2px solid #12dc00;
-        width: 80%;
-        height: 10%;
-        margin-top: 55px;
-        font-size: 120%;
-        font-weight:bold;
+	width: 90%;
+	height: 5vh;
+        margin-top: 15%;
+        font-size: 100%;
+        color: #82a4a4;
         background-color: #232323;
         background: linear-gradient(90deg, #27373e 46%, #324b57 68%);
 }
 
-.login-input:hover{
+.login-box input:focus {
         border: 2px solid #12dc00;
-        border-radius: 20px 10px;
+        border-radius: 5px;
         color: #00d4ff;
 }
 
-
-
-
-.login-text {
-        text-align: center;
-        color: #132a2f;
-        font-size: 80%;
-        font-weight: 1000;
-}
 
 
 .container {
@@ -704,7 +743,7 @@ body {
         margin-left: 15%;
         font-size: 90%;
         color: #82a4a4;
-        text-decoration: underline;
+        text-decoration: none;
 }
 
 .sec-hr{
@@ -712,6 +751,47 @@ body {
 }
 
 
+.hljs {
+        background-color: transparent;
+}
+
+.code-wrapper {
+        position: relative;
+        border-radius: 5px;
+        background-color: #1d2c4a91;
+        width: 73%;
+        height: 12vh;
+        margin-top: 6%;
+        margin-left: 11%;
+        margin-bottom: 5%;
+        overflow: auto;
+}
+
+
+.code {
+        position: absolute;
+        top: 1%;
+}
+.cp-btn {
+        position: absolute;
+        border-radius: 5px;
+        border: none;
+        background-color: #315cb091;
+        top: 8%;
+        right: 4%;
+        padding: 7px;
+        color: #eee;
+        opacity: 0;
+}
+
+.cp-btn:hover {
+        background-color: #062d7b91;
+        border: 1px #eee;
+}
+
+.code-wrapper:hover .cp-btn {
+        opacity: 1;
+}
 
 
 .icon-list {
@@ -1019,13 +1099,14 @@ body {
 
 
 
+
 .login-box {
-        margin-right: 35%;
-        margin-left: 35%;
-        margin-top: 7%;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 900;
+	position: absolute;
+	top: 65%;
+	width: 45%;
+	left: 25%;
+	text-align: center;
+	font-size: 100%;
 
 }
 
@@ -1040,35 +1121,29 @@ body {
 }
 
 
-.login-input {
+.login-box input {
+	position: relative;
         text-align: center;
         outline: none;
         border: none;
         border-bottom: 2px solid #12dc00;
-        width: 80%;
-        height: 10%;
-        margin-top: 55px;
-        font-size: 120%;
-        font-weight:bold;
+	width: 90%;
+	height: 5vh;
+        margin-top: 15%;
+        font-size: 100%;
+        color: #82a4a4;
         background-color: #232323;
         background: linear-gradient(90deg, #27373e 46%, #324b57 68%);
 }
 
-.login-input:hover{
+.login-box input:focus {
         border: 2px solid #12dc00;
-        border-radius: 20px 10px;
+        border-radius: 5px;
         color: #00d4ff;
 }
 
 
 
-
-.login-text {
-        text-align: center;
-        color: #132a2f;
-        font-size: 80%;
-        font-weight: 1000;
-}
 
 .container {
 	
@@ -1102,13 +1177,54 @@ body {
         margin-left: 15%;
         font-size: 90%;
         color: #82a4a4;
-        text-decoration: underline;
+        text-decoration: none;
 }
 
 .sec-hr{
         width: 70%;
 }
 
+.hljs {
+        background-color: transparent;
+}
+
+.code-wrapper {
+        position: relative;
+        border-radius: 5px;
+        background-color: #1d2c4a91;
+        width: 73%;
+        height: 12vh;
+        margin-top: 6%;
+        margin-left: 11%;
+        margin-bottom: 5%;
+        overflow: auto;
+}
+
+
+.code {
+        position: absolute;
+        top: 1%;
+}
+.cp-btn {
+        position: absolute;
+        border-radius: 5px;
+        border: none;
+        background-color: #315cb091;
+        top: 8%;
+        right: 4%;
+        padding: 7px;
+        color: #eee;
+        opacity: 0;
+}
+
+.cp-btn:hover {
+        background-color: #062d7b91;
+        border: 1px #eee;
+}
+
+.code-wrapper:hover .cp-btn {
+        opacity: 1;
+}
 
 
 .icon-list {
